// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createGraph processes a simple repository 1`] = `
Array [
  Object {
    "type": "sourcecred/sourcecred/Graph",
    "version": "0.2.0",
  },
  Object {
    "edges": Array [
      Object {
        "type": "sourcecred/sourcecred/AddressMap",
        "version": "0.1.0",
      },
      Object {
        "{\\"id\\":\\"2f7155e359fd0ecb96ffdca66fa45b6ed5792809:README.txt\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"INCLUDES\\"}": Object {
          "dstIndex": 2,
          "payload": Object {
            "name": "README.txt",
          },
          "srcIndex": 1,
        },
        "{\\"id\\":\\"2f7155e359fd0ecb96ffdca66fa45b6ed5792809:science.txt\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"INCLUDES\\"}": Object {
          "dstIndex": 3,
          "payload": Object {
            "name": "science.txt",
          },
          "srcIndex": 1,
        },
        "{\\"id\\":\\"3715ddfb8d4c4fd2a6f6af75488c82f84c92ec2f^1\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_PARENT\\"}": Object {
          "dstIndex": 18,
          "payload": Object {
            "parentIndex": 1,
          },
          "srcIndex": 4,
        },
        "{\\"id\\":\\"3dfb84795e07341b05fad3a0d5a55f8304b2d7d8:.gitmodules\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"INCLUDES\\"}": Object {
          "dstIndex": 6,
          "payload": Object {
            "name": ".gitmodules",
          },
          "srcIndex": 5,
        },
        "{\\"id\\":\\"3dfb84795e07341b05fad3a0d5a55f8304b2d7d8:README.txt\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"INCLUDES\\"}": Object {
          "dstIndex": 7,
          "payload": Object {
            "name": "README.txt",
          },
          "srcIndex": 5,
        },
        "{\\"id\\":\\"3dfb84795e07341b05fad3a0d5a55f8304b2d7d8:pygravitydefier\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"INCLUDES\\"}": Object {
          "dstIndex": 8,
          "payload": Object {
            "name": "pygravitydefier",
          },
          "srcIndex": 5,
        },
        "{\\"id\\":\\"3dfb84795e07341b05fad3a0d5a55f8304b2d7d8:science.txt\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"INCLUDES\\"}": Object {
          "dstIndex": 9,
          "payload": Object {
            "name": "science.txt",
          },
          "srcIndex": 5,
        },
        "{\\"id\\":\\"569e1d383759903134df75230d63c0090196d4cb:.gitmodules\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"INCLUDES\\"}": Object {
          "dstIndex": 11,
          "payload": Object {
            "name": ".gitmodules",
          },
          "srcIndex": 10,
        },
        "{\\"id\\":\\"569e1d383759903134df75230d63c0090196d4cb:README.txt\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"INCLUDES\\"}": Object {
          "dstIndex": 12,
          "payload": Object {
            "name": "README.txt",
          },
          "srcIndex": 10,
        },
        "{\\"id\\":\\"569e1d383759903134df75230d63c0090196d4cb:TODOS.txt\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"INCLUDES\\"}": Object {
          "dstIndex": 13,
          "payload": Object {
            "name": "TODOS.txt",
          },
          "srcIndex": 10,
        },
        "{\\"id\\":\\"569e1d383759903134df75230d63c0090196d4cb:pygravitydefier\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"INCLUDES\\"}": Object {
          "dstIndex": 14,
          "payload": Object {
            "name": "pygravitydefier",
          },
          "srcIndex": 10,
        },
        "{\\"id\\":\\"569e1d383759903134df75230d63c0090196d4cb:science.txt\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"INCLUDES\\"}": Object {
          "dstIndex": 15,
          "payload": Object {
            "name": "science.txt",
          },
          "srcIndex": 10,
        },
        "{\\"id\\":\\"569e1d383759903134df75230d63c0090196d4cb:src\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"INCLUDES\\"}": Object {
          "dstIndex": 16,
          "payload": Object {
            "name": "src",
          },
          "srcIndex": 10,
        },
        "{\\"id\\":\\"69c5aad50eec8f2a0a07c988c3b283a6490eb45b^1\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_PARENT\\"}": Object {
          "dstIndex": 55,
          "payload": Object {
            "parentIndex": 1,
          },
          "srcIndex": 18,
        },
        "{\\"id\\":\\"78fc9c83023386854c6bfdc5761c0e58f68e226f:index.py\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"INCLUDES\\"}": Object {
          "dstIndex": 20,
          "payload": Object {
            "name": "index.py",
          },
          "srcIndex": 19,
        },
        "{\\"id\\":\\"78fc9c83023386854c6bfdc5761c0e58f68e226f:quantum_gravity.py\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"INCLUDES\\"}": Object {
          "dstIndex": 21,
          "payload": Object {
            "name": "quantum_gravity.py",
          },
          "srcIndex": 19,
        },
        "{\\"id\\":\\"7b79d579b62994faba3b69fdf8aa442586c32681:index.py\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"INCLUDES\\"}": Object {
          "dstIndex": 23,
          "payload": Object {
            "name": "index.py",
          },
          "srcIndex": 22,
        },
        "{\\"id\\":\\"7b79d579b62994faba3b69fdf8aa442586c32681:quantum_gravity.py\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"INCLUDES\\"}": Object {
          "dstIndex": 24,
          "payload": Object {
            "name": "quantum_gravity.py",
          },
          "srcIndex": 22,
        },
        "{\\"id\\":\\"7be3ecfee5314ffa9b2d93fc4377792b2d6d70ed:.gitmodules\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"INCLUDES\\"}": Object {
          "dstIndex": 26,
          "payload": Object {
            "name": ".gitmodules",
          },
          "srcIndex": 25,
        },
        "{\\"id\\":\\"7be3ecfee5314ffa9b2d93fc4377792b2d6d70ed:README.txt\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"INCLUDES\\"}": Object {
          "dstIndex": 27,
          "payload": Object {
            "name": "README.txt",
          },
          "srcIndex": 25,
        },
        "{\\"id\\":\\"7be3ecfee5314ffa9b2d93fc4377792b2d6d70ed:pygravitydefier\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"INCLUDES\\"}": Object {
          "dstIndex": 28,
          "payload": Object {
            "name": "pygravitydefier",
          },
          "srcIndex": 25,
        },
        "{\\"id\\":\\"7be3ecfee5314ffa9b2d93fc4377792b2d6d70ed:science.txt\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"INCLUDES\\"}": Object {
          "dstIndex": 29,
          "payload": Object {
            "name": "science.txt",
          },
          "srcIndex": 25,
        },
        "{\\"id\\":\\"7be3ecfee5314ffa9b2d93fc4377792b2d6d70ed:src\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"INCLUDES\\"}": Object {
          "dstIndex": 30,
          "payload": Object {
            "name": "src",
          },
          "srcIndex": 25,
        },
        "{\\"id\\":\\"819fc546cea489476ce8dc90785e9ba7753d0a8f:.gitmodules\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"INCLUDES\\"}": Object {
          "dstIndex": 32,
          "payload": Object {
            "name": ".gitmodules",
          },
          "srcIndex": 31,
        },
        "{\\"id\\":\\"819fc546cea489476ce8dc90785e9ba7753d0a8f:README.txt\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"INCLUDES\\"}": Object {
          "dstIndex": 33,
          "payload": Object {
            "name": "README.txt",
          },
          "srcIndex": 31,
        },
        "{\\"id\\":\\"819fc546cea489476ce8dc90785e9ba7753d0a8f:TODOS.txt\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"INCLUDES\\"}": Object {
          "dstIndex": 34,
          "payload": Object {
            "name": "TODOS.txt",
          },
          "srcIndex": 31,
        },
        "{\\"id\\":\\"819fc546cea489476ce8dc90785e9ba7753d0a8f:pygravitydefier\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"INCLUDES\\"}": Object {
          "dstIndex": 35,
          "payload": Object {
            "name": "pygravitydefier",
          },
          "srcIndex": 31,
        },
        "{\\"id\\":\\"819fc546cea489476ce8dc90785e9ba7753d0a8f:science.txt\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"INCLUDES\\"}": Object {
          "dstIndex": 36,
          "payload": Object {
            "name": "science.txt",
          },
          "srcIndex": 31,
        },
        "{\\"id\\":\\"819fc546cea489476ce8dc90785e9ba7753d0a8f:src\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"INCLUDES\\"}": Object {
          "dstIndex": 37,
          "payload": Object {
            "name": "src",
          },
          "srcIndex": 31,
        },
        "{\\"id\\":\\"8d287c3bfbf8455ef30187bf5153ffc1b6eef268^1\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_PARENT\\"}": Object {
          "dstIndex": 51,
          "payload": Object {
            "parentIndex": 1,
          },
          "srcIndex": 40,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"2f7155e359fd0ecb96ffdca66fa45b6ed5792809:README.txt\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE_ENTRY\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"0fb31858c8e3710be77e1dbb8880acf8a5543d82\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"BLOB\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_CONTENTS\\"}": Object {
          "dstIndex": 0,
          "payload": Object {},
          "srcIndex": 2,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"2f7155e359fd0ecb96ffdca66fa45b6ed5792809:science.txt\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE_ENTRY\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"f1f2514ca6d7a6a1a0511957021b1995bf9ace1c\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"BLOB\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_CONTENTS\\"}": Object {
          "dstIndex": 56,
          "payload": Object {},
          "srcIndex": 3,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"3715ddfb8d4c4fd2a6f6af75488c82f84c92ec2f\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"COMMIT\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"7be3ecfee5314ffa9b2d93fc4377792b2d6d70ed\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_TREE\\"}": Object {
          "dstIndex": 25,
          "payload": Object {},
          "srcIndex": 4,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"3dfb84795e07341b05fad3a0d5a55f8304b2d7d8:.gitmodules\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE_ENTRY\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"8c6cac301e763aa6d36466e0a775eb804be2c311\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"BLOB\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_CONTENTS\\"}": Object {
          "dstIndex": 39,
          "payload": Object {},
          "srcIndex": 6,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"3dfb84795e07341b05fad3a0d5a55f8304b2d7d8:README.txt\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE_ENTRY\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"0fb31858c8e3710be77e1dbb8880acf8a5543d82\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"BLOB\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_CONTENTS\\"}": Object {
          "dstIndex": 0,
          "payload": Object {},
          "srcIndex": 7,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"3dfb84795e07341b05fad3a0d5a55f8304b2d7d8:pygravitydefier\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE_ENTRY\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"https://github.com/sourcecred/example-git-submodule.git@762c062fbdc7ec198cd693e95d55b374a08ff3e3\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"SUBMODULE_COMMIT\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_CONTENTS\\"}": Object {
          "dstIndex": 58,
          "payload": Object {},
          "srcIndex": 8,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"3dfb84795e07341b05fad3a0d5a55f8304b2d7d8:science.txt\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE_ENTRY\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"f1f2514ca6d7a6a1a0511957021b1995bf9ace1c\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"BLOB\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_CONTENTS\\"}": Object {
          "dstIndex": 56,
          "payload": Object {},
          "srcIndex": 9,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"569e1d383759903134df75230d63c0090196d4cb:.gitmodules\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE_ENTRY\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"8c6cac301e763aa6d36466e0a775eb804be2c311\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"BLOB\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_CONTENTS\\"}": Object {
          "dstIndex": 39,
          "payload": Object {},
          "srcIndex": 11,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"569e1d383759903134df75230d63c0090196d4cb:README.txt\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE_ENTRY\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"0fb31858c8e3710be77e1dbb8880acf8a5543d82\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"BLOB\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_CONTENTS\\"}": Object {
          "dstIndex": 0,
          "payload": Object {},
          "srcIndex": 12,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"569e1d383759903134df75230d63c0090196d4cb:TODOS.txt\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE_ENTRY\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"ddec7477206c30c31b81482e56b877a0b3c2638b\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"BLOB\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_CONTENTS\\"}": Object {
          "dstIndex": 54,
          "payload": Object {},
          "srcIndex": 13,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"569e1d383759903134df75230d63c0090196d4cb:pygravitydefier\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE_ENTRY\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"https://github.com/sourcecred/example-git-submodule.git@762c062fbdc7ec198cd693e95d55b374a08ff3e3\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"SUBMODULE_COMMIT\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_CONTENTS\\"}": Object {
          "dstIndex": 58,
          "payload": Object {},
          "srcIndex": 14,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"569e1d383759903134df75230d63c0090196d4cb:science.txt\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE_ENTRY\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"f1f2514ca6d7a6a1a0511957021b1995bf9ace1c\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"BLOB\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_CONTENTS\\"}": Object {
          "dstIndex": 56,
          "payload": Object {},
          "srcIndex": 15,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"569e1d383759903134df75230d63c0090196d4cb:src\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE_ENTRY\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"7b79d579b62994faba3b69fdf8aa442586c32681\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_CONTENTS\\"}": Object {
          "dstIndex": 22,
          "payload": Object {},
          "srcIndex": 16,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"69c5aad50eec8f2a0a07c988c3b283a6490eb45b\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"COMMIT\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"bbf3b8b3d26a4f884b5c022d46851f593d329192\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_TREE\\"}": Object {
          "dstIndex": 42,
          "payload": Object {},
          "srcIndex": 18,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"78fc9c83023386854c6bfdc5761c0e58f68e226f:index.py\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE_ENTRY\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"674b0b476989384510304846248b3acd16206782\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"BLOB\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_CONTENTS\\"}": Object {
          "dstIndex": 17,
          "payload": Object {},
          "srcIndex": 20,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"78fc9c83023386854c6bfdc5761c0e58f68e226f:quantum_gravity.py\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE_ENTRY\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"aea4f28abb23abde151b0ead4063227f8bf6c0b0\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"BLOB\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_CONTENTS\\"}": Object {
          "dstIndex": 41,
          "payload": Object {},
          "srcIndex": 21,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"7b79d579b62994faba3b69fdf8aa442586c32681:index.py\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE_ENTRY\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"674b0b476989384510304846248b3acd16206782\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"BLOB\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_CONTENTS\\"}": Object {
          "dstIndex": 17,
          "payload": Object {},
          "srcIndex": 23,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"7b79d579b62994faba3b69fdf8aa442586c32681:quantum_gravity.py\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE_ENTRY\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"887ad856bbc1373da146106c86cb581ad78cdafe\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"BLOB\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_CONTENTS\\"}": Object {
          "dstIndex": 38,
          "payload": Object {},
          "srcIndex": 24,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"7be3ecfee5314ffa9b2d93fc4377792b2d6d70ed:.gitmodules\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE_ENTRY\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"8c6cac301e763aa6d36466e0a775eb804be2c311\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"BLOB\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_CONTENTS\\"}": Object {
          "dstIndex": 39,
          "payload": Object {},
          "srcIndex": 26,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"7be3ecfee5314ffa9b2d93fc4377792b2d6d70ed:README.txt\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE_ENTRY\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"0fb31858c8e3710be77e1dbb8880acf8a5543d82\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"BLOB\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_CONTENTS\\"}": Object {
          "dstIndex": 0,
          "payload": Object {},
          "srcIndex": 27,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"7be3ecfee5314ffa9b2d93fc4377792b2d6d70ed:pygravitydefier\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE_ENTRY\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"https://github.com/sourcecred/example-git-submodule.git@29ef158bc982733e2ba429fcf73e2f7562244188\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"SUBMODULE_COMMIT\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_CONTENTS\\"}": Object {
          "dstIndex": 57,
          "payload": Object {},
          "srcIndex": 28,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"7be3ecfee5314ffa9b2d93fc4377792b2d6d70ed:science.txt\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE_ENTRY\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"f1f2514ca6d7a6a1a0511957021b1995bf9ace1c\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"BLOB\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_CONTENTS\\"}": Object {
          "dstIndex": 56,
          "payload": Object {},
          "srcIndex": 29,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"7be3ecfee5314ffa9b2d93fc4377792b2d6d70ed:src\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE_ENTRY\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"78fc9c83023386854c6bfdc5761c0e58f68e226f\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_CONTENTS\\"}": Object {
          "dstIndex": 19,
          "payload": Object {},
          "srcIndex": 30,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"819fc546cea489476ce8dc90785e9ba7753d0a8f:.gitmodules\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE_ENTRY\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"8c6cac301e763aa6d36466e0a775eb804be2c311\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"BLOB\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_CONTENTS\\"}": Object {
          "dstIndex": 39,
          "payload": Object {},
          "srcIndex": 32,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"819fc546cea489476ce8dc90785e9ba7753d0a8f:README.txt\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE_ENTRY\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"0fb31858c8e3710be77e1dbb8880acf8a5543d82\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"BLOB\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_CONTENTS\\"}": Object {
          "dstIndex": 0,
          "payload": Object {},
          "srcIndex": 33,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"819fc546cea489476ce8dc90785e9ba7753d0a8f:TODOS.txt\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE_ENTRY\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"ddec7477206c30c31b81482e56b877a0b3c2638b\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"BLOB\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_CONTENTS\\"}": Object {
          "dstIndex": 54,
          "payload": Object {},
          "srcIndex": 34,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"819fc546cea489476ce8dc90785e9ba7753d0a8f:pygravitydefier\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE_ENTRY\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"https://github.com/sourcecred/example-git-submodule.git@29ef158bc982733e2ba429fcf73e2f7562244188\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"SUBMODULE_COMMIT\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_CONTENTS\\"}": Object {
          "dstIndex": 57,
          "payload": Object {},
          "srcIndex": 35,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"819fc546cea489476ce8dc90785e9ba7753d0a8f:science.txt\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE_ENTRY\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"f1f2514ca6d7a6a1a0511957021b1995bf9ace1c\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"BLOB\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_CONTENTS\\"}": Object {
          "dstIndex": 56,
          "payload": Object {},
          "srcIndex": 36,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"819fc546cea489476ce8dc90785e9ba7753d0a8f:src\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE_ENTRY\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"7b79d579b62994faba3b69fdf8aa442586c32681\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_CONTENTS\\"}": Object {
          "dstIndex": 22,
          "payload": Object {},
          "srcIndex": 37,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"8d287c3bfbf8455ef30187bf5153ffc1b6eef268\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"COMMIT\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"3dfb84795e07341b05fad3a0d5a55f8304b2d7d8\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_TREE\\"}": Object {
          "dstIndex": 5,
          "payload": Object {},
          "srcIndex": 40,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"bbf3b8b3d26a4f884b5c022d46851f593d329192:.gitmodules\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE_ENTRY\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"8c6cac301e763aa6d36466e0a775eb804be2c311\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"BLOB\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_CONTENTS\\"}": Object {
          "dstIndex": 39,
          "payload": Object {},
          "srcIndex": 43,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"bbf3b8b3d26a4f884b5c022d46851f593d329192:README.txt\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE_ENTRY\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"0fb31858c8e3710be77e1dbb8880acf8a5543d82\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"BLOB\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_CONTENTS\\"}": Object {
          "dstIndex": 0,
          "payload": Object {},
          "srcIndex": 44,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"bbf3b8b3d26a4f884b5c022d46851f593d329192:TODOS.txt\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE_ENTRY\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"ddec7477206c30c31b81482e56b877a0b3c2638b\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"BLOB\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_CONTENTS\\"}": Object {
          "dstIndex": 54,
          "payload": Object {},
          "srcIndex": 45,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"bbf3b8b3d26a4f884b5c022d46851f593d329192:pygravitydefier\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE_ENTRY\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"https://github.com/sourcecred/example-git-submodule.git@29ef158bc982733e2ba429fcf73e2f7562244188\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"SUBMODULE_COMMIT\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_CONTENTS\\"}": Object {
          "dstIndex": 57,
          "payload": Object {},
          "srcIndex": 46,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"bbf3b8b3d26a4f884b5c022d46851f593d329192:science.txt\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE_ENTRY\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"f1f2514ca6d7a6a1a0511957021b1995bf9ace1c\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"BLOB\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_CONTENTS\\"}": Object {
          "dstIndex": 56,
          "payload": Object {},
          "srcIndex": 47,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"bbf3b8b3d26a4f884b5c022d46851f593d329192:src\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE_ENTRY\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"78fc9c83023386854c6bfdc5761c0e58f68e226f\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_CONTENTS\\"}": Object {
          "dstIndex": 19,
          "payload": Object {},
          "srcIndex": 48,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"bdff5d94193170015d6cbb549b7b630649428b1f:README.txt\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE_ENTRY\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"0fb31858c8e3710be77e1dbb8880acf8a5543d82\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"BLOB\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_CONTENTS\\"}": Object {
          "dstIndex": 0,
          "payload": Object {},
          "srcIndex": 50,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"c08ee3a4edea384d5291ffcbf06724a13ed72325\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"COMMIT\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"2f7155e359fd0ecb96ffdca66fa45b6ed5792809\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_TREE\\"}": Object {
          "dstIndex": 1,
          "payload": Object {},
          "srcIndex": 51,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"c2b51945e7457546912a8ce158ed9d294558d294\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"COMMIT\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"bdff5d94193170015d6cbb549b7b630649428b1f\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_TREE\\"}": Object {
          "dstIndex": 49,
          "payload": Object {},
          "srcIndex": 52,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"d160cca97611e9dfed642522ad44408d0292e8ea\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"COMMIT\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"569e1d383759903134df75230d63c0090196d4cb\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_TREE\\"}": Object {
          "dstIndex": 10,
          "payload": Object {},
          "srcIndex": 53,
        },
        "{\\"id\\":\\"[{\\\\\\"id\\\\\\":\\\\\\"e8b7a8f19701cd5a25e4a097d513ead60e5f8bcc\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"COMMIT\\\\\\"},{\\\\\\"id\\\\\\":\\\\\\"819fc546cea489476ce8dc90785e9ba7753d0a8f\\\\\\",\\\\\\"pluginName\\\\\\":\\\\\\"sourcecred/git-beta\\\\\\",\\\\\\"type\\\\\\":\\\\\\"TREE\\\\\\"}]\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_TREE\\"}": Object {
          "dstIndex": 31,
          "payload": Object {},
          "srcIndex": 55,
        },
        "{\\"id\\":\\"bbf3b8b3d26a4f884b5c022d46851f593d329192:.gitmodules\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"INCLUDES\\"}": Object {
          "dstIndex": 43,
          "payload": Object {
            "name": ".gitmodules",
          },
          "srcIndex": 42,
        },
        "{\\"id\\":\\"bbf3b8b3d26a4f884b5c022d46851f593d329192:README.txt\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"INCLUDES\\"}": Object {
          "dstIndex": 44,
          "payload": Object {
            "name": "README.txt",
          },
          "srcIndex": 42,
        },
        "{\\"id\\":\\"bbf3b8b3d26a4f884b5c022d46851f593d329192:TODOS.txt\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"INCLUDES\\"}": Object {
          "dstIndex": 45,
          "payload": Object {
            "name": "TODOS.txt",
          },
          "srcIndex": 42,
        },
        "{\\"id\\":\\"bbf3b8b3d26a4f884b5c022d46851f593d329192:pygravitydefier\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"INCLUDES\\"}": Object {
          "dstIndex": 46,
          "payload": Object {
            "name": "pygravitydefier",
          },
          "srcIndex": 42,
        },
        "{\\"id\\":\\"bbf3b8b3d26a4f884b5c022d46851f593d329192:science.txt\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"INCLUDES\\"}": Object {
          "dstIndex": 47,
          "payload": Object {
            "name": "science.txt",
          },
          "srcIndex": 42,
        },
        "{\\"id\\":\\"bbf3b8b3d26a4f884b5c022d46851f593d329192:src\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"INCLUDES\\"}": Object {
          "dstIndex": 48,
          "payload": Object {
            "name": "src",
          },
          "srcIndex": 42,
        },
        "{\\"id\\":\\"bdff5d94193170015d6cbb549b7b630649428b1f:README.txt\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"INCLUDES\\"}": Object {
          "dstIndex": 50,
          "payload": Object {
            "name": "README.txt",
          },
          "srcIndex": 49,
        },
        "{\\"id\\":\\"c08ee3a4edea384d5291ffcbf06724a13ed72325^1\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_PARENT\\"}": Object {
          "dstIndex": 52,
          "payload": Object {
            "parentIndex": 1,
          },
          "srcIndex": 51,
        },
        "{\\"id\\":\\"d160cca97611e9dfed642522ad44408d0292e8ea^1\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_PARENT\\"}": Object {
          "dstIndex": 40,
          "payload": Object {
            "parentIndex": 1,
          },
          "srcIndex": 53,
        },
        "{\\"id\\":\\"e8b7a8f19701cd5a25e4a097d513ead60e5f8bcc^1\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"HAS_PARENT\\"}": Object {
          "dstIndex": 53,
          "payload": Object {
            "parentIndex": 1,
          },
          "srcIndex": 55,
        },
        "{\\"id\\":\\"{\\\\\\"childCommit\\\\\\":\\\\\\"69c5aad50eec8f2a0a07c988c3b283a6490eb45b\\\\\\",\\\\\\"parentCommit\\\\\\":\\\\\\"e8b7a8f19701cd5a25e4a097d513ead60e5f8bcc\\\\\\",\\\\\\"path\\\\\\":[\\\\\\"src\\\\\\",\\\\\\"quantum_gravity.py\\\\\\"]}\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"BECOMES\\"}": Object {
          "dstIndex": 21,
          "payload": Object {
            "childCommit": "69c5aad50eec8f2a0a07c988c3b283a6490eb45b",
            "parentCommit": "e8b7a8f19701cd5a25e4a097d513ead60e5f8bcc",
            "path": Array [
              "src",
              "quantum_gravity.py",
            ],
          },
          "srcIndex": 24,
        },
        "{\\"id\\":\\"{\\\\\\"childCommit\\\\\\":\\\\\\"69c5aad50eec8f2a0a07c988c3b283a6490eb45b\\\\\\",\\\\\\"parentCommit\\\\\\":\\\\\\"e8b7a8f19701cd5a25e4a097d513ead60e5f8bcc\\\\\\",\\\\\\"path\\\\\\":[\\\\\\"src\\\\\\"]}\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"BECOMES\\"}": Object {
          "dstIndex": 48,
          "payload": Object {
            "childCommit": "69c5aad50eec8f2a0a07c988c3b283a6490eb45b",
            "parentCommit": "e8b7a8f19701cd5a25e4a097d513ead60e5f8bcc",
            "path": Array [
              "src",
            ],
          },
          "srcIndex": 37,
        },
        "{\\"id\\":\\"{\\\\\\"childCommit\\\\\\":\\\\\\"e8b7a8f19701cd5a25e4a097d513ead60e5f8bcc\\\\\\",\\\\\\"parentCommit\\\\\\":\\\\\\"d160cca97611e9dfed642522ad44408d0292e8ea\\\\\\",\\\\\\"path\\\\\\":[\\\\\\"pygravitydefier\\\\\\"]}\\",\\"pluginName\\":\\"sourcecred/git-beta\\",\\"type\\":\\"BECOMES\\"}": Object {
          "dstIndex": 35,
          "payload": Object {
            "childCommit": "e8b7a8f19701cd5a25e4a097d513ead60e5f8bcc",
            "parentCommit": "d160cca97611e9dfed642522ad44408d0292e8ea",
            "path": Array [
              "pygravitydefier",
            ],
          },
          "srcIndex": 14,
        },
      },
    ],
    "nodes": Array [
      Object {
        "address": Object {
          "id": "0fb31858c8e3710be77e1dbb8880acf8a5543d82",
          "pluginName": "sourcecred/git-beta",
          "type": "BLOB",
        },
        "payload": Object {},
      },
      Object {
        "address": Object {
          "id": "2f7155e359fd0ecb96ffdca66fa45b6ed5792809",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE",
        },
        "payload": Object {},
      },
      Object {
        "address": Object {
          "id": "2f7155e359fd0ecb96ffdca66fa45b6ed5792809:README.txt",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE_ENTRY",
        },
        "payload": Object {
          "name": "README.txt",
        },
      },
      Object {
        "address": Object {
          "id": "2f7155e359fd0ecb96ffdca66fa45b6ed5792809:science.txt",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE_ENTRY",
        },
        "payload": Object {
          "name": "science.txt",
        },
      },
      Object {
        "address": Object {
          "id": "3715ddfb8d4c4fd2a6f6af75488c82f84c92ec2f",
          "pluginName": "sourcecred/git-beta",
          "type": "COMMIT",
        },
        "payload": Object {},
      },
      Object {
        "address": Object {
          "id": "3dfb84795e07341b05fad3a0d5a55f8304b2d7d8",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE",
        },
        "payload": Object {},
      },
      Object {
        "address": Object {
          "id": "3dfb84795e07341b05fad3a0d5a55f8304b2d7d8:.gitmodules",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE_ENTRY",
        },
        "payload": Object {
          "name": ".gitmodules",
        },
      },
      Object {
        "address": Object {
          "id": "3dfb84795e07341b05fad3a0d5a55f8304b2d7d8:README.txt",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE_ENTRY",
        },
        "payload": Object {
          "name": "README.txt",
        },
      },
      Object {
        "address": Object {
          "id": "3dfb84795e07341b05fad3a0d5a55f8304b2d7d8:pygravitydefier",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE_ENTRY",
        },
        "payload": Object {
          "name": "pygravitydefier",
        },
      },
      Object {
        "address": Object {
          "id": "3dfb84795e07341b05fad3a0d5a55f8304b2d7d8:science.txt",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE_ENTRY",
        },
        "payload": Object {
          "name": "science.txt",
        },
      },
      Object {
        "address": Object {
          "id": "569e1d383759903134df75230d63c0090196d4cb",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE",
        },
        "payload": Object {},
      },
      Object {
        "address": Object {
          "id": "569e1d383759903134df75230d63c0090196d4cb:.gitmodules",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE_ENTRY",
        },
        "payload": Object {
          "name": ".gitmodules",
        },
      },
      Object {
        "address": Object {
          "id": "569e1d383759903134df75230d63c0090196d4cb:README.txt",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE_ENTRY",
        },
        "payload": Object {
          "name": "README.txt",
        },
      },
      Object {
        "address": Object {
          "id": "569e1d383759903134df75230d63c0090196d4cb:TODOS.txt",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE_ENTRY",
        },
        "payload": Object {
          "name": "TODOS.txt",
        },
      },
      Object {
        "address": Object {
          "id": "569e1d383759903134df75230d63c0090196d4cb:pygravitydefier",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE_ENTRY",
        },
        "payload": Object {
          "name": "pygravitydefier",
        },
      },
      Object {
        "address": Object {
          "id": "569e1d383759903134df75230d63c0090196d4cb:science.txt",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE_ENTRY",
        },
        "payload": Object {
          "name": "science.txt",
        },
      },
      Object {
        "address": Object {
          "id": "569e1d383759903134df75230d63c0090196d4cb:src",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE_ENTRY",
        },
        "payload": Object {
          "name": "src",
        },
      },
      Object {
        "address": Object {
          "id": "674b0b476989384510304846248b3acd16206782",
          "pluginName": "sourcecred/git-beta",
          "type": "BLOB",
        },
        "payload": Object {},
      },
      Object {
        "address": Object {
          "id": "69c5aad50eec8f2a0a07c988c3b283a6490eb45b",
          "pluginName": "sourcecred/git-beta",
          "type": "COMMIT",
        },
        "payload": Object {},
      },
      Object {
        "address": Object {
          "id": "78fc9c83023386854c6bfdc5761c0e58f68e226f",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE",
        },
        "payload": Object {},
      },
      Object {
        "address": Object {
          "id": "78fc9c83023386854c6bfdc5761c0e58f68e226f:index.py",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE_ENTRY",
        },
        "payload": Object {
          "name": "index.py",
        },
      },
      Object {
        "address": Object {
          "id": "78fc9c83023386854c6bfdc5761c0e58f68e226f:quantum_gravity.py",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE_ENTRY",
        },
        "payload": Object {
          "name": "quantum_gravity.py",
        },
      },
      Object {
        "address": Object {
          "id": "7b79d579b62994faba3b69fdf8aa442586c32681",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE",
        },
        "payload": Object {},
      },
      Object {
        "address": Object {
          "id": "7b79d579b62994faba3b69fdf8aa442586c32681:index.py",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE_ENTRY",
        },
        "payload": Object {
          "name": "index.py",
        },
      },
      Object {
        "address": Object {
          "id": "7b79d579b62994faba3b69fdf8aa442586c32681:quantum_gravity.py",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE_ENTRY",
        },
        "payload": Object {
          "name": "quantum_gravity.py",
        },
      },
      Object {
        "address": Object {
          "id": "7be3ecfee5314ffa9b2d93fc4377792b2d6d70ed",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE",
        },
        "payload": Object {},
      },
      Object {
        "address": Object {
          "id": "7be3ecfee5314ffa9b2d93fc4377792b2d6d70ed:.gitmodules",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE_ENTRY",
        },
        "payload": Object {
          "name": ".gitmodules",
        },
      },
      Object {
        "address": Object {
          "id": "7be3ecfee5314ffa9b2d93fc4377792b2d6d70ed:README.txt",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE_ENTRY",
        },
        "payload": Object {
          "name": "README.txt",
        },
      },
      Object {
        "address": Object {
          "id": "7be3ecfee5314ffa9b2d93fc4377792b2d6d70ed:pygravitydefier",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE_ENTRY",
        },
        "payload": Object {
          "name": "pygravitydefier",
        },
      },
      Object {
        "address": Object {
          "id": "7be3ecfee5314ffa9b2d93fc4377792b2d6d70ed:science.txt",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE_ENTRY",
        },
        "payload": Object {
          "name": "science.txt",
        },
      },
      Object {
        "address": Object {
          "id": "7be3ecfee5314ffa9b2d93fc4377792b2d6d70ed:src",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE_ENTRY",
        },
        "payload": Object {
          "name": "src",
        },
      },
      Object {
        "address": Object {
          "id": "819fc546cea489476ce8dc90785e9ba7753d0a8f",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE",
        },
        "payload": Object {},
      },
      Object {
        "address": Object {
          "id": "819fc546cea489476ce8dc90785e9ba7753d0a8f:.gitmodules",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE_ENTRY",
        },
        "payload": Object {
          "name": ".gitmodules",
        },
      },
      Object {
        "address": Object {
          "id": "819fc546cea489476ce8dc90785e9ba7753d0a8f:README.txt",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE_ENTRY",
        },
        "payload": Object {
          "name": "README.txt",
        },
      },
      Object {
        "address": Object {
          "id": "819fc546cea489476ce8dc90785e9ba7753d0a8f:TODOS.txt",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE_ENTRY",
        },
        "payload": Object {
          "name": "TODOS.txt",
        },
      },
      Object {
        "address": Object {
          "id": "819fc546cea489476ce8dc90785e9ba7753d0a8f:pygravitydefier",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE_ENTRY",
        },
        "payload": Object {
          "name": "pygravitydefier",
        },
      },
      Object {
        "address": Object {
          "id": "819fc546cea489476ce8dc90785e9ba7753d0a8f:science.txt",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE_ENTRY",
        },
        "payload": Object {
          "name": "science.txt",
        },
      },
      Object {
        "address": Object {
          "id": "819fc546cea489476ce8dc90785e9ba7753d0a8f:src",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE_ENTRY",
        },
        "payload": Object {
          "name": "src",
        },
      },
      Object {
        "address": Object {
          "id": "887ad856bbc1373da146106c86cb581ad78cdafe",
          "pluginName": "sourcecred/git-beta",
          "type": "BLOB",
        },
        "payload": Object {},
      },
      Object {
        "address": Object {
          "id": "8c6cac301e763aa6d36466e0a775eb804be2c311",
          "pluginName": "sourcecred/git-beta",
          "type": "BLOB",
        },
        "payload": Object {},
      },
      Object {
        "address": Object {
          "id": "8d287c3bfbf8455ef30187bf5153ffc1b6eef268",
          "pluginName": "sourcecred/git-beta",
          "type": "COMMIT",
        },
        "payload": Object {},
      },
      Object {
        "address": Object {
          "id": "aea4f28abb23abde151b0ead4063227f8bf6c0b0",
          "pluginName": "sourcecred/git-beta",
          "type": "BLOB",
        },
        "payload": Object {},
      },
      Object {
        "address": Object {
          "id": "bbf3b8b3d26a4f884b5c022d46851f593d329192",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE",
        },
        "payload": Object {},
      },
      Object {
        "address": Object {
          "id": "bbf3b8b3d26a4f884b5c022d46851f593d329192:.gitmodules",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE_ENTRY",
        },
        "payload": Object {
          "name": ".gitmodules",
        },
      },
      Object {
        "address": Object {
          "id": "bbf3b8b3d26a4f884b5c022d46851f593d329192:README.txt",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE_ENTRY",
        },
        "payload": Object {
          "name": "README.txt",
        },
      },
      Object {
        "address": Object {
          "id": "bbf3b8b3d26a4f884b5c022d46851f593d329192:TODOS.txt",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE_ENTRY",
        },
        "payload": Object {
          "name": "TODOS.txt",
        },
      },
      Object {
        "address": Object {
          "id": "bbf3b8b3d26a4f884b5c022d46851f593d329192:pygravitydefier",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE_ENTRY",
        },
        "payload": Object {
          "name": "pygravitydefier",
        },
      },
      Object {
        "address": Object {
          "id": "bbf3b8b3d26a4f884b5c022d46851f593d329192:science.txt",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE_ENTRY",
        },
        "payload": Object {
          "name": "science.txt",
        },
      },
      Object {
        "address": Object {
          "id": "bbf3b8b3d26a4f884b5c022d46851f593d329192:src",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE_ENTRY",
        },
        "payload": Object {
          "name": "src",
        },
      },
      Object {
        "address": Object {
          "id": "bdff5d94193170015d6cbb549b7b630649428b1f",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE",
        },
        "payload": Object {},
      },
      Object {
        "address": Object {
          "id": "bdff5d94193170015d6cbb549b7b630649428b1f:README.txt",
          "pluginName": "sourcecred/git-beta",
          "type": "TREE_ENTRY",
        },
        "payload": Object {
          "name": "README.txt",
        },
      },
      Object {
        "address": Object {
          "id": "c08ee3a4edea384d5291ffcbf06724a13ed72325",
          "pluginName": "sourcecred/git-beta",
          "type": "COMMIT",
        },
        "payload": Object {},
      },
      Object {
        "address": Object {
          "id": "c2b51945e7457546912a8ce158ed9d294558d294",
          "pluginName": "sourcecred/git-beta",
          "type": "COMMIT",
        },
        "payload": Object {},
      },
      Object {
        "address": Object {
          "id": "d160cca97611e9dfed642522ad44408d0292e8ea",
          "pluginName": "sourcecred/git-beta",
          "type": "COMMIT",
        },
        "payload": Object {},
      },
      Object {
        "address": Object {
          "id": "ddec7477206c30c31b81482e56b877a0b3c2638b",
          "pluginName": "sourcecred/git-beta",
          "type": "BLOB",
        },
        "payload": Object {},
      },
      Object {
        "address": Object {
          "id": "e8b7a8f19701cd5a25e4a097d513ead60e5f8bcc",
          "pluginName": "sourcecred/git-beta",
          "type": "COMMIT",
        },
        "payload": Object {},
      },
      Object {
        "address": Object {
          "id": "f1f2514ca6d7a6a1a0511957021b1995bf9ace1c",
          "pluginName": "sourcecred/git-beta",
          "type": "BLOB",
        },
        "payload": Object {},
      },
      Object {
        "address": Object {
          "id": "https://github.com/sourcecred/example-git-submodule.git@29ef158bc982733e2ba429fcf73e2f7562244188",
          "pluginName": "sourcecred/git-beta",
          "type": "SUBMODULE_COMMIT",
        },
        "payload": Object {
          "hash": "29ef158bc982733e2ba429fcf73e2f7562244188",
          "url": "https://github.com/sourcecred/example-git-submodule.git",
        },
      },
      Object {
        "address": Object {
          "id": "https://github.com/sourcecred/example-git-submodule.git@762c062fbdc7ec198cd693e95d55b374a08ff3e3",
          "pluginName": "sourcecred/git-beta",
          "type": "SUBMODULE_COMMIT",
        },
        "payload": Object {
          "hash": "762c062fbdc7ec198cd693e95d55b374a08ff3e3",
          "url": "https://github.com/sourcecred/example-git-submodule.git",
        },
      },
    ],
  },
]
`;

exports[`findBecomesEdges works on the example repository 1`] = `
Array [
  Object {
    "becomesEdge": Object {
      "from": Object {
        "name": "src",
        "tree": "819fc546cea489476ce8dc90785e9ba7753d0a8f",
      },
      "path": Array [
        "src",
      ],
      "to": Object {
        "name": "src",
        "tree": "bbf3b8b3d26a4f884b5c022d46851f593d329192",
      },
    },
    "childCommit": "69c5aad50eec8f2a0a07c988c3b283a6490eb45b",
    "parentCommit": "e8b7a8f19701cd5a25e4a097d513ead60e5f8bcc",
  },
  Object {
    "becomesEdge": Object {
      "from": Object {
        "name": "quantum_gravity.py",
        "tree": "7b79d579b62994faba3b69fdf8aa442586c32681",
      },
      "path": Array [
        "src",
        "quantum_gravity.py",
      ],
      "to": Object {
        "name": "quantum_gravity.py",
        "tree": "78fc9c83023386854c6bfdc5761c0e58f68e226f",
      },
    },
    "childCommit": "69c5aad50eec8f2a0a07c988c3b283a6490eb45b",
    "parentCommit": "e8b7a8f19701cd5a25e4a097d513ead60e5f8bcc",
  },
  Object {
    "becomesEdge": Object {
      "from": Object {
        "name": "pygravitydefier",
        "tree": "569e1d383759903134df75230d63c0090196d4cb",
      },
      "path": Array [
        "pygravitydefier",
      ],
      "to": Object {
        "name": "pygravitydefier",
        "tree": "819fc546cea489476ce8dc90785e9ba7753d0a8f",
      },
    },
    "childCommit": "e8b7a8f19701cd5a25e4a097d513ead60e5f8bcc",
    "parentCommit": "d160cca97611e9dfed642522ad44408d0292e8ea",
  },
]
`;

exports[`findBecomesEdgesForCommits works on the example repository 1`] = `
Array [
  Object {
    "from": Object {
      "name": "src",
      "tree": "819fc546cea489476ce8dc90785e9ba7753d0a8f",
    },
    "path": Array [
      "src",
    ],
    "to": Object {
      "name": "src",
      "tree": "bbf3b8b3d26a4f884b5c022d46851f593d329192",
    },
  },
  Object {
    "from": Object {
      "name": "quantum_gravity.py",
      "tree": "7b79d579b62994faba3b69fdf8aa442586c32681",
    },
    "path": Array [
      "src",
      "quantum_gravity.py",
    ],
    "to": Object {
      "name": "quantum_gravity.py",
      "tree": "78fc9c83023386854c6bfdc5761c0e58f68e226f",
    },
  },
]
`;
